# mindsdb-rust-sdk

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  sdk.rs
src/models/: database.rs  mod.rs  project.rs  query.rs  response.rs  table.rs
