[package]
name = "mindsdb"
version = "0.1.0"
edition = "2021"
authors = ["0xMimir <tmimir@proton.me>"]
repository = "https://github.com/0xMimir/mindsdb-rust-sdk"
homepage = "https://github.com/0xMimir/mindsdb-rust-sdk"
readme = "README.md"
description = "SDK for interaction with MindsDB api"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
